<resources>
    <string name="app_name">ChatBot</string>


    <!--  Registration strings-->
    <string name="RegisterPageTitle">CREATE ACCOUNT</string>
    <string name="Firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="Welcome_msg">
        Welcome to CHATBOT
    We are thrilled to have you on board! Our AI-powered chatbot is here to assist you with all your needs, 24/7.
    Here is what you can expect from us:
    - Quick and accurate responses
    - Personalized experience
    - Assistance with any queries or concerns

    </string>


    <!--    login page-->
    <string name="LoginPageTitle">SIGN IN</string>
    <string name="forgotpass">Recover Account</string>


    <!--    geting started-->
    <string name="introduction1">
        We are your personal AI-powered assistant, ready to answer any question you have. Our advanced technology and vast knowledge base ensure that you receive the most accurate and relevant information.
        Ask us anything, and we will do our best to provide you with a helpful response.
    </string>
    <string name="introduction2">\n\n\n
    Read the welcome message: The welcome page will provide an introduction to the chatbot and what it can do.

    Ask a question: Type your question or request into the chat interface and press enter to send it to the chatbot.

    Wait for a response: The chatbot will process your request and provide an answer in a matter of seconds.

    Interact with the chatbot: If you need additional information or clarification, feel free to ask follow-up questions or provide additional details.

    End the conversation: When have finished using the chatbot, simply close the application or navigate away from the page.
    </string>
    <string name="introduction3">
        The information provided by This bot is intended for general informational purposes only and is not a substitute for professional advice.
        While we strive to provide accurate and up-to-date information, we make no representations or warranties of any kind, express or implied, about the completeness, accuracy, reliability, suitability or availability with respect to the chatbot or the information, products, services, or related graphics contained in the chatbot for any purpose. Any reliance you place on such information is therefore strictly at your own risk.
    </string>
    <string name="introduction4"> In case you forgot your password click on the "Forgot Password" link,on the login page.\n
    1. Enter the email address associated with your account.\n
    2. Click the "Submit" or "Reset Password" button.\n
    3. Check your email for a password reset message from your application. This message will contain instructions on how to reset your password, such as clicking on a link or entering a code.\n
    4. Follow the instructions provided in the email to reset your password.\n
    Once you have successfully reset your password, you should be able to log into your account using your new password.</string>
    <string name="introduction5">thhis is a simple introduction page</string>
    <string name="shakersCommunity">Welcome to the Support page of our app! We are dedicated to providing the best experience for our users and value your feedback. If you would like to support our app and its development, you have several options:\n

    Join our Shakers Community: Connect with other users, share your thoughts and experiences, and stay updated on the latest developments. Click the "Join Community" button to learn more and get involved.\n

    Donate Funds: Your financial support helps us continue to improve and maintain the app. Click the "Donate" button to learn more about the donation process and make a contribution.\n

    Contribute to Development: Do you have ideas for new features or improvements? Do you have skills you would like to share? Click the "Contribute" button to learn more about how you can get involved and make a difference.</string>
    <string name="shakerscommunity2">We are always here to listen. If you have any questions or feedback, please use the contact form to get in touch with our team. Thank you for your support!
</string>
    <string name="aboutBot">

This Bot is an AI-powered chatbot designed to provide quick and accurate answers to any question you have. Our advanced technology and vast knowledge base make it easy for you to receive the information you need, when you need it.

Whether you are looking for information on a specific topic, need help with a task, or just want to chat, Bot is here to assist you. Our user-friendly interface and conversational style make it easy for you to interact with the chatbot, and our commitment to accuracy and helpfulness ensures that you receive the best possible experience.

So why wait? Try OurBot today and see for yourself how we can help you with all your questions and needs.

    </string>
</resources>